--- a/3. Dunders (MP)/3.1 Let's Add A __repr__ (MP).ipynb
+++ b/3. Dunders (MP)/3.1 Let's Add A __repr__ (MP).ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "6d65edc5",
    "metadata": {},
    "outputs": [],
@@ -27,6 +27,7 @@
     "    def __init__(self, title, author, book_type, pages):\n",
     "        self.title = title\n",
     "        self.author = author\n",
+    "        self.book_type = book_type\n",
     "        self.pages = pages"
    ]
   },
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "31b57403",
    "metadata": {},
    "outputs": [],
@@ -53,12 +54,12 @@
    "id": "fbe1a65e",
    "metadata": {},
    "source": [
-    "The default representation of this object is shown below."
+    "The default representation of this object is shown below. (Showing memory location)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "8f137804",
    "metadata": {},
    "outputs": [
@@ -66,8 +67,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Book object at 0x7d1288580d10>\n",
-      "<__main__.Book object at 0x7d1288580d10>\n"
+      "<__main__.Book object at 0x70dcd8749040>\n",
+      "<__main__.Book object at 0x70dcd8749040>\n"
      ]
     }
    ],
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "2b28e469",
    "metadata": {},
    "outputs": [],
@@ -95,6 +96,7 @@
     "    def __init__(self, title, author, book_type, pages):\n",
     "        self.title = title\n",
     "        self.author = author\n",
+    "        self.book_type = book_type\n",
     "        self.pages = pages\n",
     "\n",
     "    def __repr__(self):\n",
@@ -103,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "2fd92392",
    "metadata": {},
    "outputs": [],
@@ -116,12 +118,12 @@
    "id": "a324e264",
    "metadata": {},
    "source": [
-    "Now, when you call the object, you get a helpful representation of it."
+    "Now, when you call the object, you get a customized representation of it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "2e7fea89",
    "metadata": {},
    "outputs": [
@@ -131,7 +133,7 @@
        "The title is Antifragile"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
